--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" type="image/png" href="#" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-</head>
+<link href="css/style.css" rel="stylesheet"></head>
 
 <body>
   <div class="wrapper">
@@ -18,7 +18,7 @@
         <div class="header__inner">
           <nav class="navigation">
             <span class="mobile_menu">
-              <img src="images/mobile_menu.png" alt="menu" />
+              <img src="images/mobile_menu.c00f.png" alt="menu" />
             </span>
             <ul class="navigation__left">
               <li><a href="#">Tour</a></li>
@@ -26,14 +26,14 @@
               <li><a href="#">Pricing</a></li>
             </ul>
             <a href="#" class="logo">
-              <img src="images/logo.png" alt="logo" />
+              <img src="images/logo.183b.png" alt="logo" />
             </a>
             <ul class="navigation__right">
               <li class="light-gray-text-color"><a href="#">Help</a></li>
               <li><a href="#">Contacts</a></li>
               <li>
                 <a class="button__blue" href="#">
-                  <img src="images/apple_icon.png" alt="apple" />
+                  <img src="images/apple_icon.c8f9.png" alt="apple" />
                   <span>Get App</span>
                 </a>
               </li>
@@ -55,11 +55,11 @@
                 quite convivial.
               </p>
               <a href="#" class="button__light">
-                <img src="images/play_icon.png" alt="Play" />
+                <img src="images/play_icon.2291.png" alt="Play" />
                 <span>Watch Video</span>
               </a>
               <div class="device">
-                <img class="device__item" src="images/iPhone_main.png" alt="Phone" />
+                <img class="device__item" src="images/iPhone_main.1402.png" alt="Phone" />
               </div>
             </div>
           </div>
@@ -69,7 +69,7 @@
         <div class="container">
           <div class="advantages__inner">
             <div class="advantages__item">
-              <img src="images/lock_icon.png" alt="Lock" class="advantages__icon" />
+              <img src="images/lock_icon.4be4.png" alt="Lock" class="advantages__icon" />
               <h3>Real-time all the time</h3>
               <p>
                 Thus much I thought proper to tell you in relation to
@@ -82,7 +82,7 @@
               </p>
             </div>
             <div class="advantages__item">
-              <img src="images/clock_icon.png" alt="Clock" class="advantages__icon" />
+              <img src="images/clock_icon.c124.png" alt="Clock" class="advantages__icon" />
               <h3>Adopt without any obstacles</h3>
               <p>
                 This sounded a very good reason, and Alice was quite pleased
@@ -100,7 +100,7 @@
         <div class="container">
           <div class="protect__inner">
             <div class="protect__img">
-              <img src="images/iphone_protect.png" alt="iPhone" />
+              <img src="images/iphone_protect.895f.png" alt="iPhone" />
             </div>
             <div class="protect__text">
               <h2>Your day is protected</h2>
@@ -116,7 +116,7 @@
               <div class="protect__buttons">
                 <a href="#" class="button__blue">
                   <span>Try to hack us</span>
-                  <img src="images/arrow_icon.png" alt="Try" />
+                  <img src="images/arrow_icon.3ae0.png" alt="Try" />
                 </a>
                 <a href="#" class="button__light">
                   <span>Learn more</span>
@@ -145,15 +145,15 @@
               <span>Partners</span>
               <div class="location_partners">
                 <a href="#">
-                  <img class="drop" src="images/dropbox_logo.png" alt="Dropbox" />
+                  <img class="drop" src="images/dropbox_logo.eb8a.png" alt="Dropbox" />
                 </a>
                 <a href="#">
-                  <img class="ever" src="images/evernote_logo.png" alt="Evernote" />
+                  <img class="ever" src="images/evernote_logo.7412.png" alt="Evernote" />
                 </a>
               </div>
             </div>
             <div class="location__img">
-              <img src="images/map.png" alt="Map" />
+              <img src="images/map.3466.png" alt="Map" />
             </div>
           </div>
         </div>
@@ -169,19 +169,19 @@
             <div class="interface-swiper-container">
               <div class="swiper-wrapper interface__slider">
                 <div class="swiper-slide slider__item">
-                  <img src="images/get_started_interface.png" alt="Get started" />
+                  <img src="images/get_started_interface.fa4f.png" alt="Get started" />
                 </div>
                 <div class="swiper-slide slider__item">
-                  <img src="images/sign_in_interface.png" alt="Sign in" />
+                  <img src="images/sign_in_interface.12ef.png" alt="Sign in" />
                 </div>
                 <div class="swiper-slide slider__item">
-                  <img src="images/iPhone_interface.png" alt="Sign up" />
+                  <img src="images/iPhone_interface.ccf5.png" alt="Sign up" />
                 </div>
                 <div class="swiper-slide slider__item">
-                  <img src="images/calendar_interface.png" alt="Calendar" />
+                  <img src="images/calendar_interface.4a76.png" alt="Calendar" />
                 </div>
                 <div class="swiper-slide slider__item">
-                  <img src="images/recorder_interface.png" alt="Recorder" />
+                  <img src="images/recorder_interface.52e5.png" alt="Recorder" />
                 </div>
               </div>
             </div>
@@ -194,13 +194,13 @@
                 <input type="email" placeholder="get@craftwork.com" id="email" name="email" />
                 <div class="form__button">
                   <div>Send invite</div>
-                  <img src="images/arrow_icon.png" alt="Arrow" />
+                  <img src="images/arrow_icon.3ae0.png" alt="Arrow" />
                 </div>
               </div>
             </form>
             <span>or Download From</span>
             <a href="#" class="download__button">
-              <img src="images/apple_logo.png" alt="Apple" />
+              <img src="images/apple_logo.6f52.png" alt="Apple" />
               <div>
                 Download on the
                 <div class="app">App Store</div>
@@ -214,13 +214,13 @@
           <div class="feedbacks__inner">
             <div class="feedbacks__photoes">
               <div class="photoes_item">
-                <img src="images/photo_1_feedbacks.jpg" alt="photo" />
+                <img src="images/photo_1_feedbacks.7cf0.jpg" alt="photo" />
               </div>
               <div class="photoes_item">
-                <img src="images/photo_2_feedbacks.jpg" alt="photo" />
+                <img src="images/photo_2_feedbacks.7db2.jpg" alt="photo" />
               </div>
               <div class="photoes_item">
-                <img src="images/photo_3_feedbacks.jpg" alt="photo" />
+                <img src="images/photo_3_feedbacks.a0f3.jpg" alt="photo" />
               </div>
             </div>
             <h3>New Providence is the great UI kit</h3>
@@ -229,7 +229,7 @@
               she was now more than nine feet high, and she at once took up
               the little golden key and hurried off to the garden door.”
             </p>
-            <img src="images/stars.png" alt="Stars" />
+            <img src="images/stars.771a.png" alt="Stars" />
             <div class="author">Cameron Dowman</div>
 
             <!-- <div class="f-swiper-container">
@@ -237,13 +237,13 @@
                   <div class="f-swiper-slide">
                     <div class="feedbacks__photoes">
                       <div class="photoes_item">
-                        <img src="images/photo_1_feedbacks.jpg" alt="photo" />
+                        <img src="images/photo_1_feedbacks.7cf0.jpg" alt="photo" />
                       </div>
                       <div class="photoes_item">
-                        <img src="images/photo_2_feedbacks.jpg" alt="photo" />
+                        <img src="images/photo_2_feedbacks.7db2.jpg" alt="photo" />
                       </div>
                       <div class="photoes_item">
-                        <img src="images/photo_3_feedbacks.jpg" alt="photo" />
+                        <img src="images/photo_3_feedbacks.a0f3.jpg" alt="photo" />
                       </div>
                     </div>
                     <h3>New Providence is the great UI kit</h3>
@@ -253,19 +253,19 @@
                       once took up the little golden key and hurried off to the
                       garden door.”
                     </p>
-                    <img src="images/stars.png" alt="Stars" />
+                    <img src="images/stars.771a.png" alt="Stars" />
                     <div class="author">Cameron Dowman</div>
                   </div>
                   <div class="f-swiper-slide">
                     <div class="feedbacks__photoes">
                       <div class="photoes_item">
-                        <img src="images/photo_1_feedbacks.jpg" alt="photo" />
+                        <img src="images/photo_1_feedbacks.7cf0.jpg" alt="photo" />
                       </div>
                       <div class="photoes_item">
-                        <img src="images/photo_2_feedbacks.jpg" alt="photo" />
+                        <img src="images/photo_2_feedbacks.7db2.jpg" alt="photo" />
                       </div>
                       <div class="photoes_item">
-                        <img src="images/photo_3_feedbacks.jpg" alt="photo" />
+                        <img src="images/photo_3_feedbacks.a0f3.jpg" alt="photo" />
                       </div>
                     </div>
                     <h3>New Providence is the great UI kit</h3>
@@ -275,19 +275,19 @@
                       once took up the little golden key and hurried off to the
                       garden door.”
                     </p>
-                    <img src="images/stars.png" alt="Stars" />
+                    <img src="images/stars.771a.png" alt="Stars" />
                     <div class="author">Cameron Dowman</div>
                   </div>
                   <div class="f-swiper-slide">
                     <div class="feedbacks__photoes">
                       <div class="photoes_item">
-                        <img src="images/photo_1_feedbacks.jpg" alt="photo" />
+                        <img src="images/photo_1_feedbacks.7cf0.jpg" alt="photo" />
                       </div>
                       <div class="photoes_item">
-                        <img src="images/photo_2_feedbacks.jpg" alt="photo" />
+                        <img src="images/photo_2_feedbacks.7db2.jpg" alt="photo" />
                       </div>
                       <div class="photoes_item">
-                        <img src="images/photo_3_feedbacks.jpg" alt="photo" />
+                        <img src="images/photo_3_feedbacks.a0f3.jpg" alt="photo" />
                       </div>
                     </div>
                     <h3>New Providence is the great UI kit</h3>
@@ -297,7 +297,7 @@
                       once took up the little golden key and hurried off to the
                       garden door.”
                     </p>
-                    <img src="images/stars.png" alt="Stars" />
+                    <img src="images/stars.771a.png" alt="Stars" />
                     <div class="author">Cameron Dowman</div>
                   </div>
                 </div>
@@ -418,7 +418,7 @@
                 <input type="email" placeholder="Your email" id="sub-email" name="email" />
                 <div class="form__button">
                   <div>Subscribe</div>
-                  <img src="images/arrow_icon.png" alt="Arrow" />
+                  <img src="images/arrow_icon.3ae0.png" alt="Arrow" />
                 </div>
               </div>
             </form>
@@ -432,25 +432,25 @@
         <div class="footer__inner">
           <div class="footer__inner__sitemap">
             <div class="contact_block">
-              <img class="footer_logo" src="images/newrovidence_footer.png" alt="Logo" />
+              <img class="footer_logo" src="images/newrovidence_footer.b6ee.png" alt="Logo" />
               <p>
                 It was some time before he obtained any answer, and the reply,
                 when made, was unpropitious.
               </p>
               <a href="#" class="download__button">
-                <img src="images/apple_logo.png" alt="Apple" />
+                <img src="images/apple_logo.6f52.png" alt="Apple" />
                 <div>
                   Download on the
                   <div class="app">App Store</div>
                 </div>
               </a>
               <div class="social">
-                <a class="social_icons" href="#"><img src="images/twitter.png" alt="" /></a>
-                <a class="social_icons" href="#"><img src="images/facebook.png" alt="" /></a>
+                <a class="social_icons" href="#"><img src="images/twitter.694a.png" alt="" /></a>
+                <a class="social_icons" href="#"><img src="images/facebook.8414.png" alt="" /></a>
 
-                <a class="social_icons" href="#"><img src="images/google.png" alt="" /></a>
-                <a class="social_icons" href="#"><img src="images/pinterest.png" alt="" /></a>
-                <a class="social_icons" href="#"><img src="images/linkedIn.png" alt="" /></a>
+                <a class="social_icons" href="#"><img src="images/google.c5e5.png" alt="" /></a>
+                <a class="social_icons" href="#"><img src="images/pinterest.1518.png" alt="" /></a>
+                <a class="social_icons" href="#"><img src="images/linkedIn.b36b.png" alt="" /></a>
               </div>
             </div>
 
@@ -485,7 +485,7 @@
             </div>
             <div class="logo">
               Made with Love by
-              <img src="images/logo_copywrite_footer.png" alt="Logo" />
+              <img src="images/logo_copywrite_footer.5ceb.png" alt="Logo" />
             </div>
           </div>
         </div>
@@ -495,6 +495,6 @@
 
   <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-</body>
+<script type="text/javascript" src="js/main.min.js"></script></body>
 
 </html>
